--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <header><h1>Full stack bootcamp Notes</h1></header>
+        <header><h1>Full stack bootcamp Notes from Github synced to VSCode</h1></header>
         <hr>
         <p>
             <table >
