--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                         <th>Dev Docs</th>
                         <th><a href="https://devdocs.io/">Dev Documentation</a></th>
                     </tr>
+                    <tr>
+                        <th>Github</th>
+                        <th><a href="https://github.com/"">Github</a></th>
+                    </tr>
                 </tbody>
 
             </table>
