Added CSS External

--- a/contact.html
+++ b/contact.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/styles.css">
     <title>John Green: Contact Me</title>
 </head>
 
 <body>
     <h1>My contact details</h1>
-    <p>2038 Blue Sage Ln E, Chanhassen. MN. 55317</p>
-    <p>952-984-5536</p>
-    <p>john_green@BigCompany.com</p>
-    <hr>
+    2038 Blue Sage Ln E, Chanhassen. MN. 55317<br>
+    952-984-5536<br>
+    john_green@BigCompany.com
+    <hr class="dottedlinehr">
     <br>
     <form enctype="text/plain" action="mailto:John_Green@BigCompany.com" method="post">
         <table>
