--- a/index.html
+++ b/index.html
@@ -4,32 +4,23 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/styles.css">
         <title>John Green's Personal Site</title>
     </head>
 
-    <style>
-
-        .dottedlinehr {
-            border-style: dashed;
-            color:gray;
-            width: 5%;
-
-        }
-
-    </style>
     
-    <body style="background-color:#EAF6F6;">
+    <body>
         <header>
             <table>
                 <tr>
                     <td><img src="imgs/fake-human-circle-img.png" alt="Picture of John Green"></td>
                     <td>
                         <h1>John Green</h1>
-                        <p><em>IT Manager@<strong>BigCompany</strong></em> & Technology enthusiast</p>
+                        <em>IT Manager@<strong>BigCompany</strong></em> & Technology enthusiast
                     </td>
             </table>
 
-        <hr class="dottedlinehr"> 
+        <hr> 
         <h3>Hobbies</h3>
         <ul>
             <li>Ride Motorcycles and feel the wind in my face</li>
